--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 asgiref==3.5.0
 Django==4.0.3
 sqlparse==0.4.2
+django-environ==0.11.2
 django-ckeditor==6.7.0
 djangorestframework==3.14.0
-drf-spectacular==0.26.5
+django-rest-swagger==2.2.0
+drf-yasg==1.21.7
+psycopg2==2.9.9
